<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/datachannel_test_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="DataChannel Test" />

    <TextView
        android:id="@+id/datachannel_test_status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <Button
        android:id="@+id/datachannel_test_start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start" />

    <Button
        android:id="@+id/datachannel_test_stop_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Stop" />

    <EditText
        android:id="@+id/datachannel_test_message_edit"
        android:layout_width="match_parent"
        android:enabled="false"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/datachannel_test_send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Send" />

    <TextView
        android:id="@+id/datachannel_test_messages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="" />

</LinearLayout>